# ArborX

./: 20180710-an18.tex  CMakeLists.txt  README.md  dbscan.json  tulip_master_21a55f2_gfx906.console  tulip_master_21a55f2_gfx906.json  tulip_master_21a55f2_gfx908.console  tulip_master_21a55f2_gfx908.json  tulip_master_21a55f2_sm70.console  tulip_master_21a55f2_sm70.json
benchmarks/: CMakeLists.txt
benchmarks/bvh_driver/: bvh_driver.cpp
benchmarks/occupancy_calculator/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt
examples/access_traits/: CMakeLists.txt  example_tasking.cpp
examples/callback/: CMakeLists.txt  bar.cpp  example_mpi_callback.cpp  foo.cpp  main.cpp  whatever.hpp
examples/contact/: CMakeLists.txt  example_solid_mechanics.cpp
examples/hdbscan/: ArborX_BoostGraph.cpp  CMakeLists.txt  experimental_tree_traversal.cpp  main.cpp  parallel_boruvka.cpp  parallel_boruvka.hpp
simple_kernel_timer_master_21a55f2_gfx906/: construction_1e3.json  construction_1e3.txt  construction_1e4.json  construction_1e4.txt  construction_1e5.json  construction_1e5.txt  construction_1e6.json  construction_1e6.txt  construction_1e7.json  construction_1e7.txt  knn_search_1e3.json  knn_search_1e4.json  knn_search_1e5.json  knn_search_1e6.json  knn_search_1e7.json  radius_search_1e3.json  radius_search_1e4.json  radius_search_1e5.json  radius_search_1e6.json  radius_search_1e7.json
simple_kernel_timer_master_21a55f2_gfx908/: construction_1e3.json  construction_1e4.json  construction_1e5.json  construction_1e6.json  construction_1e7.json  knn_search_1e3.json  knn_search_1e4.json  knn_search_1e5.json  knn_search_1e6.json  knn_search_1e7.json  radius_search_1e3.json  radius_search_1e4.json  radius_search_1e5.json  radius_search_1e6.json  radius_search_1e7.json
simple_kernel_timer_master_21a55f2_sm70/: construction_1e3.json  construction_1e4.json  construction_1e5.json  construction_1e6.json  construction_1e7.json  knn_search_1e3.json  knn_search_1e4.json  knn_search_1e5.json  knn_search_1e6.json  knn_search_1e7.json  radius_search_1e3.json  radius_search_1e4.json  radius_search_1e5.json  radius_search_1e6.json  radius_search_1e7.json
src/details/: ArborX_AccessTraits.hpp  ArborX_CudaOccupancy.hpp  ArborX_DetailsBatchedQueries.hpp  ArborX_DetailsHappyTreeFriends.hpp  ArborX_DetailsKokkosExt.hpp  ArborX_DetailsTreeConstruction.hpp  ArborX_DetailsTreeTraversal.hpp  ArborX_ExperimentalTreeTraversal.hpp
test/: CMakeLists.txt  tstNoName.cpp  tstQueryTreeCallbacks.cpp
