if(Kokkos_DEVICES MATCHES "CUDA")
  add_executable(ArborX_CudaAccessTraits.exe example_cuda_access_traits.cpp)
  target_link_libraries(ArborX_CudaAccessTraits.exe ${ArborX_TARGET})
  add_test(NAME ArborX_CudaAccessTraits_Example COMMAND ./ArborX_CudaAccessTraits.exe)
endif()
add_executable(ArborX_Tasking.exe example_tasking.cpp)
target_link_libraries(ArborX_Tasking.exe ${ArborX_TARGET})
add_test(NAME ArborX_Tasking_Example COMMAND ./ArborX_Tasking.exe)
